# Simple-Stock-Analyser

./: CMakeLists.txt  README.md  analyser.cpp  analyser_tests.cpp  main.cpp
datafiles/: testfile.txt
